# LyricVideoMaker

./: .gitignore  AGENTS.md  EULA.txt  PLUGINS.md  README.md  THIRD_PARTY_LICENSES.md  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.base.json  tsconfig.json  vitest.config.ts  vitest.setup.ts
.codex/environments/: environment.toml
.github/workflows/: docs.yml  npm-publish.yml  release.yml  test.yml
apps/desktop/: index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/electron/: main.ts  preload.ts  preview-worker-thread.ts  subtitle-generator.ts
apps/desktop/src/: App.test.tsx  App.tsx  electron-api.ts  ffmpeg-discovery.test.ts  plugin-library.test.ts  preview-worker-client.test.ts  styles.css  subtitle-generator.test.ts  use-frame-preview.test.ts  (+1 more)
context/impl/: impl-image-component.md  impl-shape-component.md  impl-shared-helpers.md  impl-static-text-component.md  impl-video-component.md  impl-video-field-type.md  impl-video-frame-sync.md  loop-log.md
docs/: index.md  package-lock.json
docs/.vitepress/: config.ts
docs/guide/: getting-started.md  plugin-api.md  plugin-development.md  plugins.md  preview-and-rendering.md  scenes-and-components.md  subtitle-generation.md  workspace.md
examples/external-plugin-basic/: README.md  lyric-video-plugin.json  package.json  tsup.config.ts
scripts/: freeze-subtitle-sidecar.mjs  install-chromium.mjs  install-subtitle-sidecar.mjs  publish.mjs
sidecars/subtitle-aligner/: pyinstaller.spec  pyproject.toml
sidecars/subtitle-aligner/src/lyric_video_subtitle_aligner/: cli.py
(+50 files in other folders)
